// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extends won't populate namespace > base 1`] = `
[
  "b",
  "a",
]
`;

exports[`extends won't populate namespace > base 2`] = `
[
  "b",
]
`;

exports[`extends won't populate namespace > base 3`] = `
[
  "c",
  "a",
]
`;

exports[`extends won't populate namespace > base 4`] = `
[
  "c",
]
`;

exports[`extends won't populate namespace > expose keys 1`] = `
[
  "b",
  "a",
]
`;

exports[`extends won't populate namespace > expose keys 2`] = `
[
  "b",
]
`;

exports[`extends won't populate namespace > expose keys 3`] = `
[
  "c",
  "a",
]
`;

exports[`extends won't populate namespace > expose keys 4`] = `
[
  "c",
]
`;

exports[`extends won't populate namespace > modelVar 1`] = `
[
  "b",
  "a",
]
`;

exports[`extends won't populate namespace > modelVar 2`] = `
[
  "b",
]
`;

exports[`extends won't populate namespace > modelVar 3`] = `
[
  "c",
  "a",
]
`;

exports[`extends won't populate namespace > modelVar 4`] = `
[
  "c",
]
`;

exports[`extends won't populate namespace > setState 1`] = `
{
  "a": 1,
  "b": 1,
}
`;

exports[`extends won't populate namespace > setState 2`] = `
{
  "a": 1,
  "b": 0,
  "c": 1,
}
`;

exports[`extends won't populate namespace > stateVars 1`] = `
[
  "b",
  "a",
]
`;

exports[`extends won't populate namespace > stateVars 2`] = `
[
  "b",
]
`;

exports[`extends won't populate namespace > stateVars 3`] = `
[
  "c",
  "a",
]
`;

exports[`extends won't populate namespace > stateVars 4`] = `
[
  "c",
]
`;
